--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,11 @@
             <a href="home.html"><img src="img\Name logo.png"></a>
             
             <ul class="HeaderNav">
-                <a class="active" href="home.html">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a class="active" href="about.html">About</a>
                 <a class="active" href="portfolio.html">Portfolio</a>
                 <a class="active" href="contact.html">Contact</a>
+                <a class="active" href="dog.html">Dog api</a>
             </ul>
             
         </header>
