Update CV, page titles, back button more visible

--- a/dog.html
+++ b/dog.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
+        <p>Click the button to get a random dog image. It will automatically be flipped and greyscaled!</p>
         <button id="btnClick">Get image!</button>
         <a id="back_b" href="index.html">Go Back</a>
+        <a id="back_b" href="index.html" style="color: rgb(0, 0, 0); background-color: #e1e1e1; padding: 10px 20px; text-decoration: none; border-radius: 5px;">Go Back</a>
         <p id="mir_t"></p>
         <p id="gray_t"></p>
         <script src="script.js"></script>
