--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tema 2 - Home</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,7 +26,7 @@
                 <h1>My portfolio:</h1>
                 <hr>
                 
-                <iframe src="pdf\\CV - Căproiu Victor.pdf" width="80%" height="500px" style="text-align: center;">
+                <iframe src="pdf\\Victor-Căproiu-FlowCV-Resume-20240302.pdf" width="80%" height="500px" style="text-align: center;">
                 </iframe>
                 
             </div>
