--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </div>
 
             <div class="container-img">
-                <img class="cardImg" src="img\\Books.jpg" style="margin: 0%;">
+                <img class="cardImg" src="img\\Books-min.jpg" style="margin: 0%;">
             </div>
         </div>
 
         <div class="card" style="align-self: flex-end;"> <!-- card 2 - aliniat la stanga -->
             <div class="container-img">
-                <img class="cardImg" src="img\\Code.jpg" style="margin: 0%;">
+                <img class="cardImg" src="img\\Code-min.jpg" style="margin: 0%;">
             </div>
 
             <div class="container">
@@ -78,7 +78,7 @@
             </div>
 
             <div class="container-img">
-                <img class="cardImg" src="img\\Football.jpg" style="margin: 0%;">
+                <img class="cardImg" src="img\\Football-min.jpg" style="margin: 0%;">
             </div>
         </div>
     </div>
