New page for lift project

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
             <a class="active" href="portfolio.html">Portfolio</a>
             <a class="active" href="contact.html">Contact</a>
             <a class="active" href="dog.html">Dog api</a>
+            <a class="active" href="lift_proj.html">Lift project</a>
         </ul>
         
     </header>
