--- a/lift_proj.html
+++ b/lift_proj.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>Lift project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,10 +24,10 @@
 
         <div class="card" style="margin: 40px; width: auto; display: block;">
             <div style="margin: 40px;">
-                <h1>My portfolio:</h1>
+                <h1>Documentation:</h1>
                 <hr>
                 
-                <iframe src="pdf\\Victor-Căproiu-FlowCV-Resume-20240302.pdf" width="80%" height="500px" style="text-align: center;">
+                <iframe src="pdf\\Documentatie proiect.pdf" width="80%" height="500px" style="text-align: center;">
                 </iframe>
                 
             </div>
